Fixing bugs in RMIA (and LiRA) attacks

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,19 @@
 ---
+rmia-cora-GCN:
+  attack: "rmia"
+  dataset: "cora"
+  model: "GCN"
+  epochs_target: 500
+  experiments: 10
+  hidden_dim_target: [64]
+  query_hops: [0, 2]
+  transductive: false
+  target_fpr: 0.005
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+  rmia_gamma: 2.0
 lira-cora-GCN:
   attack: "lira"
   dataset: "cora"
@@ -6,23 +21,10 @@ lira-cora-GCN:
   epochs_target: 500
   experiments: 10
   hidden_dim_target: [64]
-  num_shadow_models: 128
-  query_hops: [0, 1, 2]
+  query_hops: [0, 2]
   transductive: false
   target_fpr: 0.005
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-confidence-cora-GCN:
-  attack: "confidence"
-  dataset: "cora"
-  model: "GCN"
-  epochs_target: 500
-  experiments: 100
-  hidden_dim_target: [64]
-  query_hops: [0, 1, 2]
-  transductive: false
-  target_fpr: 0.005
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
+  num_shadow_models: 64
