--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 ---
-rmia-cora-GCN:
-  attack: "rmia"
+cora-GCN:
+  attacks: "rmia,lira"
   dataset: "cora"
   model: "GCN"
   epochs_target: 500
@@ -12,19 +12,5 @@ rmia-cora-GCN:
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 64
+  num_shadow_models: 32
   rmia_gamma: 2.0
-lira-cora-GCN:
-  attack: "lira"
-  dataset: "cora"
-  model: "GCN"
-  epochs_target: 500
-  experiments: 10
-  hidden_dim_target: [64]
-  query_hops: [0, 2]
-  transductive: false
-  target_fpr: 0.005
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
-  num_shadow_models: 64
