Making lira work

--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 ---
-cora-GCN:
-  attacks: "rmia,lira"
-  dataset: "cora"
+ppi-GCN:
+  attacks: "confidence,lira"
+  dataset: "ppi"
   model: "GCN"
   epochs_target: 500
-  experiments: 2
+  experiments: 10
   hidden_dim_target: [64]
   query_hops: [0, 2]
   transductive: false
@@ -12,20 +12,5 @@ cora-GCN:
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 8
-  rmia_gamma: 2.0
-citeseer-GCN:
-  attacks: "rmia,lira"
-  dataset: "citeseer"
-  model: "GCN"
-  epochs_target: 500
-  experiments: 2
-  hidden_dim_target: [64]
-  query_hops: [0, 2]
-  transductive: false
-  target_fpr: 0.005
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
-  num_shadow_models: 8
+  num_shadow_models: 20
   rmia_gamma: 2.0
