Just trying the monte carlo inference idea (sample average over many graphs during inference)

--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,52 @@
 ---
-cora-GCN:
-  attacks: "rmia,lira"
+# cora-GCN-1:
+#   attacks: "rmia"
+#   dataset: "cora"
+#   model: "GCN"
+#   epochs_target: 15
+#   epochs_shadow: 15
+#   experiments: 20
+#   hidden_dim_target: [64]
+#   query_hops: [2]
+#   target_fpr: 0.005
+#   lr: 0.01
+#   weight_decay: 0.0001
+#   dropout: 0.5
+#   num_shadow_models: 32
+#   rmia_gamma: 2.0
+#   inductive_inference: False
+#   mc_samples_inference: 1
+# cora-GCN-2:
+#   attacks: "rmia"
+#   dataset: "cora"
+#   model: "GCN"
+#   epochs_target: 15
+#   epochs_shadow: 15
+#   experiments: 20
+#   hidden_dim_target: [64]
+#   query_hops: [2]
+#   target_fpr: 0.005
+#   lr: 0.01
+#   weight_decay: 0.0001
+#   dropout: 0.5
+#   num_shadow_models: 32
+#   rmia_gamma: 2.0
+#   inductive_inference: False
+#   mc_samples_inference: 2
+cora-GCN-51:
+  attacks: "rmia"
   dataset: "cora"
   model: "GCN"
-  epochs_target: 500
-  epochs_shadow: 20
-  experiments: 5
+  epochs_target: 15
+  epochs_shadow: 15
+  experiments: 1
   hidden_dim_target: [64]
-  query_hops: [0, 2]
-  transductive: false
-  target_fpr: 0.005
+  query_hops: [0,2]
+  target_fpr: 0.0001
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 8
+  num_shadow_models: 32
   rmia_gamma: 2.0
+  inductive_inference: False
+  mc_samples_inference: 101
