--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 ---
-cora-GCN:
-  attacks: "rmia,lira"
+rmia-cora-GCN:
+  attack: "rmia"
   dataset: "cora"
   model: "GCN"
-  epochs_target: 500
+  epochs_target: 20
   epochs_shadow: 20
-  experiments: 5
+  experiments: 2
   hidden_dim_target: [64]
   query_hops: [0, 2]
   transductive: false
@@ -15,3 +15,18 @@ cora-GCN:
   dropout: 0.5
   num_shadow_models: 8
   rmia_gamma: 2.0
+lira-cora-GCN-2:
+  attack: "lira"
+  dataset: "cora"
+  model: "GCN"
+  epochs_target: 20
+  epochs_shadow: 20
+  experiments: 2
+  hidden_dim_target: [64]
+  query_hops: [0, 2]
+  transductive: false
+  target_fpr: 0.005
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 8
