--- a/config.yaml
+++ b/config.yaml
@@ -1,32 +1,32 @@
 ---
-rmia-cora-GCN:
+rmia-flickr-GCN:
   attack: "rmia"
-  dataset: "cora"
+  dataset: "flickr"
   model: "GCN"
-  epochs_target: 20
-  epochs_shadow: 20
-  experiments: 2
-  hidden_dim_target: [64]
+  epochs_target: 100
+  epochs_shadow: 100
+  experiments: 1
+  hidden_dim_target: [512]
   query_hops: [0, 2]
   transductive: false
-  target_fpr: 0.005
-  lr: 0.01
-  weight_decay: 0.0001
+  target_fpr: 0.01
+  lr: 0.001
+  weight_decay: 0.00001
   dropout: 0.5
-  num_shadow_models: 8
+  num_shadow_models: 32
   rmia_gamma: 2.0
-lira-cora-GCN-2:
+lira-flickr-GCN:
   attack: "lira"
-  dataset: "cora"
+  dataset: "flickr"
   model: "GCN"
-  epochs_target: 20
-  epochs_shadow: 20
-  experiments: 2
-  hidden_dim_target: [64]
+  epochs_target: 100
+  epochs_shadow: 100
+  experiments: 1
+  hidden_dim_target: [512]
   query_hops: [0, 2]
   transductive: false
-  target_fpr: 0.005
-  lr: 0.01
-  weight_decay: 0.0001
+  target_fpr: 0.01
+  lr: 0.001
+  weight_decay: 0.00001
   dropout: 0.5
-  num_shadow_models: 8
+  num_shadow_models: 32
