--- a/config.yaml
+++ b/config.yaml
@@ -1,82 +1,199 @@
 ---
-# bayes-optimal-amazon-photo-GAT:
-#   attack: "bayes-optimal"
-#   dataset: "amazon-photo"
-#   model: "GAT"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 1
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-#   num_sampled_graphs: 1
-# lira-amazon-photo-GAT:
-#   attack: "lira"
-#   dataset: "amazon-photo"
-#   model: "GAT"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 1
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-# rmia-amazon-photo-GAT:
-#   attack: "rmia"
-#   dataset: "amazon-photo"
-#   model: "GAT"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 1
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-#   rmia_gamma: 2
-
 logsumexp-threshold-cora-GCN:
-  attack: "logsumexp-threshold"
+  attack: "lset"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 20
+  num_experiments: 10
   hidden_dim_target: [32]
-  target_fpr: 0.001
+  target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 2
+  num_shadow_models: 64
 rmia-cora-GCN:
   attack: "rmia"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 20
+  num_experiments: 10
   hidden_dim_target: [32]
-  target_fpr: 0.001
+  target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 2
+  num_shadow_models: 64
 lira-cora-GCN:
   attack: "lira"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 20
+  num_experiments: 10
   hidden_dim_target: [32]
-  target_fpr: 0.001
+  target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 2
+  num_shadow_models: 64
+logsumexp-threshold-cora-GAT:
+  attack: "lset"
+  dataset: "cora"
+  model: "GAT"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+rmia-cora-GAT:
+  attack: "rmia"
+  dataset: "cora"
+  model: "GAT"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+lira-cora-GAT:
+  attack: "lira"
+  dataset: "cora"
+  model: "GAT"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+logsumexp-threshold-citeseer-GCN:
+  attack: "lset"
+  dataset: "citeseer"
+  model: "GCN"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+rmia-citeseer-GCN:
+  attack: "rmia"
+  dataset: "citeseer"
+  model: "GCN"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+lira-citeseer-GCN:
+  attack: "lira"
+  dataset: "citeseer"
+  model: "GCN"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+logsumexp-threshold-citeseer-GraphSAGE:
+  attack: "lset"
+  dataset: "citeseer"
+  model: "GraphSAGE"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+rmia-citeseer-GraphSAGE:
+  attack: "rmia"
+  dataset: "citeseer"
+  model: "GraphSAGE"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+lira-citeseer-GraphSAGE:
+  attack: "lira"
+  dataset: "citeseer"
+  model: "GraphSAGE"
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 10
+  hidden_dim_target: [32]
+  target_fpr: 0.01
+  lr: 0.01
+  weight_decay: 0.0001
+  dropout: 0.5
+  num_shadow_models: 64
+# logsumexp-threshold-amazon-photo-GCN:
+#   attack: "lset"
+#   dataset: "amazon-photo"
+#   model: "GCN"
+#   epochs_target: 200
+#   epochs_shadow: 200
+#   num_experiments: 3
+#   hidden_dim_target: [512]
+#   target_fpr: 0.01
+#   lr: 0.001
+#   weight_decay: 0.0001
+#   dropout: 0.0
+#   num_shadow_models: 8
+#   num_target_nodes: -1
+# lira-amazon-photo-GCN:
+#   attack: "lira"
+#   dataset: "amazon-photo"
+#   model: "GCN"
+#   epochs_target: 200
+#   epochs_shadow: 200
+#   num_experiments: 3
+#   hidden_dim_target: [512]
+#   target_fpr: 0.01
+#   lr: 0.001
+#   weight_decay: 0.0001
+#   dropout: 0.0
+#   num_shadow_models: 8
+#   num_target_nodes: -1
+# rmia-amazon-photo-GCN:
+#   attack: "rmia"
+#   dataset: "amazon-photo"
+#   model: "GCN"
+#   epochs_target: 200
+#   epochs_shadow: 200
+#   num_experiments: 3
+#   hidden_dim_target: [512]
+#   target_fpr: 0.01
+#   lr: 0.001
+#   weight_decay: 0.0001
+#   dropout: 0.0
+#   num_shadow_models: 8
+#   num_target_nodes: -1
