--- a/config.yaml
+++ b/config.yaml
@@ -1,43 +1,36 @@
 ---
-logsumexp-threshold-cora-GCN:
-  attack: "lset"
+bayes-optimal-cora-GCN-MI:
+  attack: "bayes-optimal"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 10
+  num_experiments: 1
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-rmia-cora-GCN:
-  attack: "rmia"
+  num_sampled_graphs: 8
+  num_threads: 8
+  bayes_sampling_strategy: "model-independent"
+bayes-optimal-cora-GCN-MCMC:
+  attack: "bayes-optimal"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 10
+  num_experiments: 1
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-lira-cora-GCN:
-  attack: "lira"
-  dataset: "cora"
-  model: "GCN"
-  epochs_target: 15
-  epochs_shadow: 15
-  num_experiments: 10
-  hidden_dim_target: [32]
-  target_fpr: 0.01
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
-  num_shadow_models: 10
+  num_sampled_graphs: 8
+  num_threads: 8
+  bayes_sampling-strategy: "MCMC"
 # logsumexp-threshold-cora-GAT:
 #   attack: "lset"
 #   dataset: "cora"
