--- a/config.yaml
+++ b/config.yaml
@@ -1,208 +1,28 @@
 ---
-bayes-optimal-cora-GCN-MI:
-  attack: "bayes-optimal"
+lset-cora-GCN:
+  attack: "lset"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 1
+  num_experiments: 5
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-  num_sampled_graphs: 8
-  num_threads: 8
-  bayes_sampling_strategy: "model-independent"
-bayes-optimal-cora-GCN-MCMC:
-  attack: "bayes-optimal"
+bootstrapped-lset-cora-GCN:
+  attack: "bootstrapped-lset"
   dataset: "cora"
   model: "GCN"
   epochs_target: 15
   epochs_shadow: 15
-  num_experiments: 1
+  num_experiments: 5
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-  num_sampled_graphs: 8
-  num_threads: 8
-  bayes_sampling_strategy: "MCMC"
-bayes-optimal-cora-GCN-MIA0:
-  attack: "bayes-optimal"
-  dataset: "cora"
-  model: "GCN"
-  epochs_target: 15
-  epochs_shadow: 15
-  num_experiments: 1
-  hidden_dim_target: [32]
-  target_fpr: 0.01
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
-  num_shadow_models: 10
-  num_sampled_graphs: 8
-  num_threads: 8
-  bayes_sampling_strategy: "mia-0-hop"
-# logsumexp-threshold-cora-GAT:
-#   attack: "lset"
-#   dataset: "cora"
-#   model: "GAT"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# rmia-cora-GAT:
-#   attack: "rmia"
-#   dataset: "cora"
-#   model: "GAT"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# lira-cora-GAT:
-#   attack: "lira"
-#   dataset: "cora"
-#   model: "GAT"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# logsumexp-threshold-citeseer-GCN:
-#   attack: "lset"
-#   dataset: "citeseer"
-#   model: "GCN"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# rmia-citeseer-GCN:
-#   attack: "rmia"
-#   dataset: "citeseer"
-#   model: "GCN"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# lira-citeseer-GCN:
-#   attack: "lira"
-#   dataset: "citeseer"
-#   model: "GCN"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# logsumexp-threshold-citeseer-GraphSAGE:
-#   attack: "lset"
-#   dataset: "citeseer"
-#   model: "GraphSAGE"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# rmia-citeseer-GraphSAGE:
-#   attack: "rmia"
-#   dataset: "citeseer"
-#   model: "GraphSAGE"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# lira-citeseer-GraphSAGE:
-#   attack: "lira"
-#   dataset: "citeseer"
-#   model: "GraphSAGE"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 10
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 64
-# logsumexp-threshold-amazon-photo-GCN:
-#   attack: "lset"
-#   dataset: "amazon-photo"
-#   model: "GCN"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 3
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-#   num_target_nodes: -1
-# lira-amazon-photo-GCN:
-#   attack: "lira"
-#   dataset: "amazon-photo"
-#   model: "GCN"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 3
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-#   num_target_nodes: -1
-# rmia-amazon-photo-GCN:
-#   attack: "rmia"
-#   dataset: "amazon-photo"
-#   model: "GCN"
-#   epochs_target: 200
-#   epochs_shadow: 200
-#   num_experiments: 3
-#   hidden_dim_target: [512]
-#   target_fpr: 0.01
-#   lr: 0.001
-#   weight_decay: 0.0001
-#   dropout: 0.0
-#   num_shadow_models: 8
-#   num_target_nodes: -1
+  num_sampled_graphs: 10
