--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -6,6 +6,7 @@ default-parameters:
   epochs_target: 20
   epochs_shadow: 20
   num_experiments: 1
+  max_num_nodes: null
   num_target_nodes: -1 # -1 uses all nodes
   hidden_dim_target: [64]
   query_hops: [0]
