Compute target nodes before anything attack dependent to assure the same targets are used for different attacks. Update bootstrapped-lset.

--- a/config.yaml
+++ b/config.yaml
@@ -1,43 +1,47 @@
 ---
-lset-reddit-GCN:
+lset-cora-GCN:
   attack: "lset"
-  dataset: "reddit"
-  max_num_nodes: 3000
+  dataset: "cora"
+  max_num_nodes: 5000
   model: "GCN"
-  epochs_target: 100
-  epochs_shadow: 100
-  num_experiments: 3
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 1
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-lira-reddit-GCN:
-  attack: "lira"
-  dataset: "reddit"
-  max_num_nodes: 3000
+bootstrapped-lset-cora-GCN-only-in:
+  attack: "bootstrapped-lset"
+  dataset: "cora"
+  max_num_nodes: 5000
   model: "GCN"
-  epochs_target: 100
-  epochs_shadow: 100
-  num_experiments: 3
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 1
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-rmia-reddit-GCN:
-  attack: "rmia"
-  dataset: "reddit"
-  max_num_nodes: 3000
+  num_sampled_graphs: 8
+  use_out_neighbors: False
+bootstrapped-lset-cora-GCN:
+  attack: "bootstrapped-lset"
+  dataset: "cora"
+  max_num_nodes: 5000
   model: "GCN"
-  epochs_target: 100
-  epochs_shadow: 100
-  num_experiments: 3
+  epochs_target: 15
+  epochs_shadow: 15
+  num_experiments: 1
   hidden_dim_target: [32]
   target_fpr: 0.01
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
+  num_sampled_graphs: 8
+  use_out_neighbors: True
