--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -16,7 +16,7 @@ default-parameters:
   dropout: 0.5
   early_stopping: 0
   datadir: "./data"
-  grid_search: False
+  hyperparam_search: False
   optimizer: "Adam"
   make_roc_plots: False
   inductive_split: True
