--- a/config.yaml
+++ b/config.yaml
@@ -13,8 +13,8 @@ lset-cora-GCN:
   weight_decay: 0.0001
   dropout: 0.5
   num_shadow_models: 10
-improved-lset-cora-GCN:
-  attack: "improved-lset"
+graph-lset-cora-GCN:
+  attack: "graph-lset"
   dataset: "cora"
   max_num_nodes: 10000
   model: "GCN"
