--- a/config.yaml
+++ b/config.yaml
@@ -1,44 +1,23 @@
 ---
-lset-cora-GCN:
-  attack: "lset"
+cora-GCN:
   dataset: "cora"
-  max_num_nodes: null
   model: "GCN"
-  epochs_target: 15
-  epochs_shadow: 15
-  num_experiments: 1
-  hidden_dim_target: [32]
-  target_fpr: 0.01
+  epochs: 15
+  hidden_dim: [32]
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
-  num_shadow_models: 10
-graph-lset-cora-GCN:
-  attack: "graph-lset"
-  dataset: "cora"
   max_num_nodes: null
-  model: "GCN"
-  epochs_target: 15
-  epochs_shadow: 15
   num_experiments: 1
-  hidden_dim_target: [32]
-  target_fpr: 0.01
-  lr: 0.01
-  weight_decay: 0.0001
-  dropout: 0.5
-  num_shadow_models: 10
-  num_sampled_graphs: 1
-# strong-lset-cora-GCN:
-#   attack: "strong-lset"
-#   dataset: "cora"
-#   max_num_nodes: 10000
-#   model: "GCN"
-#   epochs_target: 15
-#   epochs_shadow: 15
-#   num_experiments: 3
-#   hidden_dim_target: [32]
-#   target_fpr: 0.01
-#   lr: 0.01
-#   weight_decay: 0.0001
-#   dropout: 0.5
-#   num_shadow_models: 10
+  target_fpr: [0.01, 0.005]
+  attacks:
+    lset:
+      attack: "lset"
+      num_shadow_models: 10
+      epochs: 50
+    confidence:
+      attack: "confidence"
+      hidden_dim: [64]
+    lira:
+      attack: "lira"
+      num_shadow_models: 10
