--- a/config.yaml
+++ b/config.yaml
@@ -9,15 +9,26 @@ cora-GCN:
   dropout: 0.5
   max_num_nodes: null
   num_target_nodes: 500
-  num_audits: 10
+  num_audits: 5
   target_fpr: [0.01, 0.005]
-  pretrain_shadow_models: True
-  num_shadow_models: 20
+  pretrain_shadow_models: False
   attacks:
     lset:
       attack: "lset"
-    lira:
-      attack: "lira"
-    rmia:
-      attack: "rmia"
-      rmia_gamma: 2
+      num_shadow_models: 20
+    strong-lset-in:
+      attack: "strong-lset"
+      num_shadow_models: 20
+      use_target_node: True
+    strong-lset-out:
+      attack: "strong-lset"
+      num_shadow_models: 20
+      use_target_node: False
+    strong-graph-lset-in:
+      attack: "strong-graph-lset"
+      num_shadow_models: 20
+      use_target_node: True
+    strong-graph-lset-out:
+      attack: "strong-graph-lset"
+      num_shadow_models: 20
+      use_target_node: False
