--- a/config.yaml
+++ b/config.yaml
@@ -2,23 +2,18 @@
 cora-GCN:
   dataset: "cora"
   model: "GCN"
-  epochs: 15
+  epochs: 1000
   hidden_dim: [32]
   lr: 0.01
   weight_decay: 0.0001
   dropout: 0.5
   max_num_nodes: null
-  num_target_nodes: 500
-  num_audits: 5
+  num_target_nodes: 10
+  num_audits: 1
   target_fpr: [0.01, 0.005]
   pretrain_shadow_models: False
   attacks:
-    lset:
-      attack: "lset"
-      num_shadow_models: 20
-    strong-lset:
-      attack: "strong-lset"
-      num_shadow_models: 20
     strong-graph-lset-in:
       attack: "strong-graph-lset"
-      num_shadow_models: 20
+      num_shadow_models: 4
+      num_processes: 20
