--- a/hyperparam_tuning_config.yaml
+++ b/hyperparam_tuning_config.yaml
@@ -14,6 +14,7 @@ cora-GCN:
   hyperparam_search: True
   train_frac: 0.5
   val_frac: 0.5
+  minimum_average_gen_gap: 0.08
   hyperparam_grid:
     lr: [0.01]
     weight_decay: [0.0001, 0.00001]
