--- a/conda_env/conda_env_gpu.yaml
+++ b/conda_env/conda_env_gpu.yaml
@@ -1,13 +1,9 @@
 name: conda_env_cpu
 channels:
-- pytorch
-- nvidia
 - conda-forge
 - defaults
 dependencies:
 - python=3.12
-- pytorch=2.3.1
-- pytorch-cuda=11.8
 - pip
 - numpy
 - matplotlib
@@ -15,7 +11,14 @@ dependencies:
 - scipy
 - pandas
 - pip:
-  - torch_geometric==2.6.0
+  - torch==2.2.0+cu118
+  - torchvision==0.17.0+cu118
+  - torch_geometric
+  - pyg_lib
+  - torch_scatter
+  - torch_sparse
+  - -f https://download.pytorch.org/whl/torch_stable.html
+  - -f https://data.pyg.org/whl/torch-2.2.0+cu118.html
   - laplace-torch
   - torchmetrics
   - tqdm
